--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-    max-width: 600px;
+    max-width: max-content;
     margin: 40px auto;
     background-color: #fff;
     padding: 30px;
