--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,7 @@ body {
 
 .container {
     max-width: max-content;
+    min-width: 600px;
     margin: 40px auto;
     background-color: #fff;
     padding: 30px;
